Apply style to main-elements

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Mislang</title>
-
     <link rel="stylesheet" href="style.css">
     <script defer src="app.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 <body>
     <div id="main">
@@ -24,14 +24,19 @@
         </div>
         <div id="main-elements">
             <div id="left-globe">
-                <ul>
-                    <li>krazy</li>
-                </ul>
+                <h1>Located <br> in the <br> Philippines</h1>
+                <div id="globe">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle-hor"></div>
+                    <div class="circle-hor-middle"></div>
+                </div>
             </div>
             <div id="freelance">
-                <i class="ri-arrow-right-down-line"></i>
-                <h1>Freelance</h1>
-                <h1>Designer & Developer</h1>
+                <iconify-icon icon="ri:arrow-right-down-line"></iconify-icon>
+                <h1>Designer and Developer</h1>
+                <h1>Software Engineer</h1>
             </div>
             <div id="gabriel-mislang">
                 <h1>Gabriel Mislang - Gabriel Mislang</h1>
