Add scrolling text animation to my name

--- a/index.html
+++ b/index.html
@@ -38,9 +38,51 @@
                 <h1>Software Engineer</h1>
             </div>
             <div id="gabriel-mislang">
-                <h1>Gabriel Mislang - Gabriel Mislang</h1>
+                <h1>Gabriel Mislang — Gabriel Mislang</h1>
             </div>
         </div>
+    </div>
+    <div id="one">
+        <div id="helpingbrand">
+            <h1>Helping brands to stand out in the digital era. <br>
+              Together we will set the new status quo. No <br> 
+              nonsense, always on the cutting edge.
+          </h1>
+          <p>The combination of my passion<br>
+              for design, code & interaction<br>
+              position me in unique place in<br> 
+             the web design world.
+          </p>
+        </div>  
+        <div id="recentworks">
+            <a href="#">RECENT WORK</a>
+            <div id="aboutme">
+                <h4>About me</h4>
+            </div>
+        </div>
+        <div id="line"></div>
+      </div>
+    </div>
+        <div id="one">
+        <div id="helpingbrand">
+            <h1>Helping brands to stand out in the digital era. <br>
+              Together we will set the new status quo. No <br> 
+              nonsense, always on the cutting edge.
+          </h1>
+          <p>The combination of my passion<br>
+              for design, code & interaction<br>
+              position me in unique place in<br> 
+             the web design world.
+          </p>
+        </div>  
+        <div id="recentworks">
+            <a href="#">RECENT WORK</a>
+            <div id="aboutme">
+                <h4>About me</h4>
+            </div>
+        </div>
+        <div id="line"></div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
